--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "version": 2,
-  "buildCommand": "echo 'No build needed'",
-  "installCommand": "pip install -r requirements.txt",
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
@@ -10,8 +14,7 @@
   ],
   "functions": {
     "api/index.py": {
-      "maxDuration": 30,
-      "runtime": "python3.9"
+      "maxDuration": 30
     }
   }
 }
