--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,7 @@
   ],
   "functions": {
     "api/index.py": {
-      "maxDuration": 30,
-      "runtime": "python3.9"
+      "maxDuration": 30
     }
   }
 }
-
