--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
   ],
   "functions": {
     "api/index.py": {
-      "maxDuration": 30
+      "maxDuration": 30,
+      "maxRequestSize": "20mb"
     }
   }
 }
