fix: 修复vercel.json配置错误并更新所有相关文档
- 移除vercel.json中无效的maxRequestSize配置（Vercel不支持此配置）
- 更新所有文档中关于maxRequestSize的错误说明
- 添加参考文献处理的异常捕获
- 标题不修改行距，只有正文应用20磅行距
- 参考文献提示改为在文本后添加（本篇文献没在正文中应用）

--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,7 @@
   ],
   "functions": {
     "api/index.py": {
-      "maxDuration": 30,
-      "maxRequestSize": "20mb"
+      "maxDuration": 30
     }
   }
 }
