--- a/env.example
+++ b/env.example
@@ -5,19 +5,26 @@
 # 存储配置（选择一种）
 # ============================================
 
-# 方案 1: Supabase Storage（推荐）
-SUPABASE_URL=https://你的项目ID.supabase.co
-SUPABASE_KEY=你的service_role key
-SUPABASE_BUCKET=word-formatter-storage
+# 方案 1: 阿里云 OSS（推荐用于阿里云服务器 ⭐）
+OSS_ACCESS_KEY_ID=你的AccessKey ID
+OSS_ACCESS_KEY_SECRET=你的AccessKey Secret
+OSS_BUCKET_NAME=word-formatter-storage
+OSS_ENDPOINT=https://oss-cn-hangzhou.aliyuncs.com
+OSS_REGION=cn-hangzhou
 
-# 方案 2: Cloudflare R2
+# 方案 2: Supabase Storage
+# SUPABASE_URL=https://你的项目ID.supabase.co
+# SUPABASE_KEY=你的service_role key
+# SUPABASE_BUCKET=word-formatter-storage
+
+# 方案 3: Cloudflare R2
 # R2_ACCOUNT_ID=你的Account ID
 # R2_ACCESS_KEY_ID=你的Access Key ID
 # R2_SECRET_ACCESS_KEY=你的Secret Access Key
 # R2_BUCKET_NAME=word-formatter-storage
 # R2_ENDPOINT=https://你的Account ID.r2.cloudflarestorage.com
 
-# 方案 3: Backblaze B2
+# 方案 4: Backblaze B2
 # B2_ACCOUNT_ID=你的Account ID
 # B2_APPLICATION_KEY=你的Application Key
 # B2_BUCKET_NAME=word-formatter-storage
