--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ httpx==0.27.2
 python-alipay-sdk==3.4.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
-weasyprint==62.3
-pypdf==3.17.0
+weasyprint>=62.3
+pypdf<4.0.0
 
